--- a/estilo.css
+++ b/estilo.css
@@ -1,6 +1,5 @@
 body {
-    background-image: url('file:///C:/Users/cezar/OneDrive/%C3%81rea%20de%20Trabalho/projeto.html/Design%20sem%20nome%20(1).png');
-		    background-repeat: no-repeat;
+    background-color: aliceblue;
 			background-attachment: fixed;
 			background-size: 100%;
 }
